# superharness

./: .gitignore  .ship-check-passed  .shipguard.yml  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Gemfile  HANDOFF.md  LICENSE  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SOUL.md  TESTS_STILL_NEEDED.md  USER_REVIEW.md  VERSION  init-project.sh  install.sh  pyproject.toml  state_manifest.yaml  superharness
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.project-hooks/: pre-commit
.shipguard/: state.db
.superharness/: .dashboard_auth_token  .gitignore  agent-pulse.yaml  benchmark.jsonl  contract.yaml  daemon-monitor.py  daemon-state.json  daemon.pid.json  failures.yaml  handoff-feat.sdk-session-claude-code-20260320T194300Z.md  handoff_mod.8-ship.md  inbox.archive.yaml  inbox.yaml  ledger.md  notify.state  profile.yaml  session-progress.md  state.sqlite3-shm  test.yaml  watcher.heartbeat  watcher.heartbeat.yaml  watcher.yaml
agents/: protocol.md  review-lenses.md
archive/: IMPLEMENTATION_PLAN.md  migration-python-tdd.md  python-migration.md
cli/: contract-today.sh  delegate-task.sh  delegate.sh  discuss.sh  dispatch.sh  doctor.sh  enqueue.sh  hygiene.sh  init.sh  install-wrapper.sh  monitor-ui.sh  normalize.sh  recall.sh  recover.sh  status.sh  task.sh  watch.sh
context/: agent-context.md  anti-rot.md  context-engineering.md  developer-profile.md
docs/: ANALYSIS-sqlite-doctrine-drift.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT-agent-harness-comparison.md  AUDIT-claude-mem-adaptation.md  AUDIT-dashboard-management.md  AUDIT-headless-refactor.md  AUDIT-paperclip-gap-analysis.md  AUDIT-pi-hermes-adaptation.md  AUDIT-sqlite-only-regression.md  BUG-set-owner-inbox-cleanup.md  CLASSIFY-discussion-tier-effort.md  COMPARE-ltx2-train-model-skill-vs-lifecycle.md  COMPATIBILITY_SHIMS_SCOPE.md  CONCEPT-agent-owned-tools.md  CONCEPT-behavioral-profile.md  CONCEPT-claude-mem-integration.md  CONCEPT-inbox-queue-unification.md  CONCEPT-notifications-and-state-isolation.md  CONCEPT-quota-and-health.md  CONCEPT-recall-progressive-disclosure.md  CONCEPT-sdk-vs-cli.md  CONCEPT-superpowers-extraction.md  CONTRIBUTING.md  DESIGN-risky-choices.md  DISCUSS.md  GUIDE.md  HANDOFF-2026-06-01.md  IMPLEMENTATION-status.md  IMPROVEMENT_PLAN.md  INSTALL-AGENT.md  MCP-MEMORY.md  PLAN-absorb-paperclip-features.md  PLAN-auto-orchestrate-dispatch.md  PLAN-auto-orchestrate-implementation.md  PLAN-claude-mem-integration.md  PLAN-effort-wiring.md  PLAN-hermes-features-to-steal.md  PLAN-hermes-self-improvement.md  PLAN-negative-knowledge-retention.md  (+60 more)
engine/: contract.rb  detect.rb  discuss.rb  discussion.rb  file_utils.rb  inbox.rb  profile.rb  recall.rb  validate.rb  yaml_helpers.rb
hooks/: session-start.sh
identity/: agent-context.md  core.md
knowledge/: decision-journal.md  failure-memory.md
methodology/: harness-thesis.md  routing.md  session-discipline.md
plan/: improvement_plan.md
plans/: testing-strategy.md
protocol/: features.schema.json  spec.md
research/: iteration-3-research.md  iteration-3b-critique.md  iteration-6-research.md
scripts/: check-changelog-append-only.sh  check-contract-hygiene.sh  check-shell-entrypoints.sh  contract-today.sh  delegate-task.sh  delegate-to-claude.sh  delegate-to-codex.sh  delegate.sh  demo.sh  dev-reinstall.sh  discuss.sh  discussion-dispatch.sh  doctor.sh  ensure-launchd-inbox-watcher.sh  heartbeat.sh  inbox-deadline-check.sh  inbox-dispatch.sh  inbox-enqueue.sh  inbox-normalize.sh  inbox-recover-stale.sh  inbox-watch.sh  inbox-yaml.rb  init-project.sh  install-launchd-inbox-watcher.sh  install-remote.sh  install-systemd-inbox-watcher.sh  install-wrapper.sh  monitor-ui.py  monitor-ui.sh  notify.sh  regression-guard.py  reset-watcher-and-test.sh  setup-watcher-worker.sh  status.sh  task.sh  uninstall-launchd-inbox-watcher.sh  uninstall.sh  verify-l5-loop.sh  worktree.sh
shux/: SHUX.md
state/: state-protocol.md
tests/: conftest.py  helpers.py  test_dashboard_timeout.py  test_distill_apply.py  test_distill_cli_dryrun.py  test_distill_e2e.py  test_distill_schedule.py  test_distiller_extract.py  test_doc_drift.py  test_docs_index_links.py  test_handoff_sqlite_write.py  test_smoke.py  (+9 more)
(+1247 files in other folders)
