[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superharness"
version = "1.80.0"
description = "Multi-agent session handoff framework for Claude Code and Codex CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "pydantic>=2.0,<3",
    "fastmcp>=0.4",
    "requests>=2.31",
    # CVE floors on fastmcp/mcp transitives (unpinned upstream, so forced here):
    # starlette <1.3.1 and python-multipart <0.0.31 carry 2026 PYSEC advisories.
    "starlette>=1.3.1",
    "python-multipart>=0.0.31",
]

[project.urls]
Homepage = "https://github.com/celstnblacc/superharness"
Repository = "https://github.com/celstnblacc/superharness"
Issues = "https://github.com/celstnblacc/superharness/issues"

[project.scripts]
superharness = "superharness.cli:main"
shux = "superharness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superharness = [
    "scripts/*",
    "engine/*.yaml",
    "module_templates/*.yaml",
    "adapter_manifests/*.yaml",
    "adapters/claude-code/*",
    "adapters/claude-code/hooks/*",
    "adapters/claude-code/.claude-plugin/*",
    "adapters/codex-cli/*",
    "adapters/codex-cli/**/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "requires_bash: test requires bash shell (skipped on Windows)",
]
